--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "geist": "^1.3.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
